[package]
name = "sapphire"
version = "0.1.0"
default-run="sapphire"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde_derive = "1.0.152"
serde = "1.0.152"
strum = "0.24.1"
mongodb = "2.3.1"
strum_macros = "0.24.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.17", features = ["full"] }
image = "0.24.5"
futures = "0.3.25"
scraper = "0.14.0"
regex = "1.7.0"
dotenv = "0.15.0"
rand = "0.8.5"
colored = "2.0.0"
thiserror = "1.0.38"
fernet = "0.2.1"
chrono = { version = "0.4.23", features = [] }
